-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: openjdk8u422
-
Component/s: hotspot
-
b01
-
b02
-
ppc
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8360705 | shenandoah8u422 | Suchismith Roy | P1 | Resolved | Fixed | b02 |
https://github.com/openjdk/jdk8u/commit/c1c8064ef0f67e85cb6a28990f4784271d949a08
introduces a new call to the macro FREE_C_HEAP_ARRAY
but is not using the correct number of arguments.
jdk8u FREE_C_HEAP_ARRAY takes 3 arguments
SeeJDK-8320005 which introduced this change.
introduces a new call to the macro FREE_C_HEAP_ARRAY
but is not using the correct number of arguments.
jdk8u FREE_C_HEAP_ARRAY takes 3 arguments
See
- backported by
-
JDK-8360705 [8u] AIX build break from JDK-8320005 backport
-
- Resolved
-
- relates to
-
JDK-8320005 Allow loading of shared objects with .a extension on AIX
-
- Resolved
-