8331791: [8u] AIX build break from JDK-8320005 backport

Reviewed-by: sgehwolf